--- a/package.json
+++ b/package.json
@@ -1,8 +1,11 @@
 {
   "name": "wplacer",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "main": "index.js",
   "type": "module",
+  "scripts": {
+    "start": "node . --env-file=.env"
+  },
   "dependencies": {
     "express": "^5.1.0",
     "puppeteer": "^24.16.0",
